; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-atm/src/extr_ifxmips_atm_ar9.c_init_ema.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-atm/src/extr_ifxmips_atm_ar9.c_init_ema.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EMA_CMD_BUF_LEN = common dso_local global i32 0, align 4
@EMA_CMD_BASE_ADDR = common dso_local global i32 0, align 4
@EMA_CMDCFG = common dso_local global i32 0, align 4
@EMA_DATA_BUF_LEN = common dso_local global i32 0, align 4
@EMA_DATA_BASE_ADDR = common dso_local global i32 0, align 4
@EMA_DATACFG = common dso_local global i32 0, align 4
@EMA_IER = common dso_local global i32 0, align 4
@EMA_READ_BURST = common dso_local global i32 0, align 4
@EMA_WRITE_BURST = common dso_local global i32 0, align 4
@EMA_CFG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_ema to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_ema() #0 {
  %1 = load i32, i32* @EMA_CMD_BUF_LEN, align 4
  %2 = shl i32 %1, 16
  %3 = load i32, i32* @EMA_CMD_BASE_ADDR, align 4
  %4 = ashr i32 %3, 2
  %5 = or i32 %2, %4
  %6 = load i32, i32* @EMA_CMDCFG, align 4
  %7 = call i32 @IFX_REG_W32(i32 %5, i32 %6)
  %8 = load i32, i32* @EMA_DATA_BUF_LEN, align 4
  %9 = shl i32 %8, 16
  %10 = load i32, i32* @EMA_DATA_BASE_ADDR, align 4
  %11 = ashr i32 %10, 2
  %12 = or i32 %9, %11
  %13 = load i32, i32* @EMA_DATACFG, align 4
  %14 = call i32 @IFX_REG_W32(i32 %12, i32 %13)
  %15 = load i32, i32* @EMA_IER, align 4
  %16 = call i32 @IFX_REG_W32(i32 255, i32 %15)
  %17 = load i32, i32* @EMA_READ_BURST, align 4
  %18 = load i32, i32* @EMA_WRITE_BURST, align 4
  %19 = shl i32 %18, 2
  %20 = or i32 %17, %19
  %21 = load i32, i32* @EMA_CFG, align 4
  %22 = call i32 @IFX_REG_W32(i32 %20, i32 %21)
  ret void
}

declare dso_local i32 @IFX_REG_W32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
